banner alignment fixed - problem with sidebar height (flex-column)

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@
     display: flex;
 }
 
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
 .grey-text {
     color: #555;
 }
@@ -47,6 +52,8 @@
     background-color: #191414;
     width: 160px;
     height: 100%;
+
+    padding-left: 20px;
 }
 
 .main-row .main {
@@ -67,15 +74,22 @@
 }
 
 /* sidebar */
+/* padding-left: 20px su tutta la sidebar -- cf. general dimensions */
 
 .sidebar .logo-container {
     height: 80px;
+
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 .sidebar .logo-container img {
-    height: 50%;
+    height: 40%;
+}
+
+.sidebar 
+
+.playlist-container .playlist-box {
+    flex-grow: 1;
 }
 
 /* main */
